Fixing bug 34398. Making element.offsetParent be a <th>, <td> or <table> if element is a decendant of one of those element types. r=hidday@geocities.com, rs=vidur@netscape.com